# aipartnerupflow

./: .gitignore  .gitmessage  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.md  structure.md
docs/api/: http.md  python.md  quick-reference.md
docs/architecture/: configuration.md  directory-structure.md  extension-registry-design.md  naming-convention.md  overview.md
docs/development/: contributing.md  extending.md  setup.md
docs/development/design/: aggregate-results-design.md  cli-design.md
docs/development/planning/: implementation-plan.md  task-tree-dependent-validation.md
docs/examples/: basic_task.md  task-tree.md
docs/getting-started/: concepts.md  examples.md  index.md  installation.md  quick-start.md
docs/guides/: api-server.md  cli.md  custom-tasks.md  task-orchestration.md
scripts/: release.sh
src/aipartnerupflow/: __init__.py  decorators.py
src/aipartnerupflow/api/: __init__.py  extensions.py  main.py
src/aipartnerupflow/api/a2a/: __init__.py  agent_executor.py  custom_starlette_app.py  event_queue_bridge.py  server.py  task_routes_adapter.py
src/aipartnerupflow/api/docs/: __init__.py  openapi.py  swagger_ui.py
src/aipartnerupflow/api/mcp/: transport_http.py  transport_stdio.py
src/aipartnerupflow/api/middleware/: __init__.py  db_session.py
src/aipartnerupflow/api/routes/: __init__.py  base.py  docs.py  system.py  tasks.py
src/aipartnerupflow/cli/: __init__.py  extension.py  main.py
src/aipartnerupflow/cli/commands/: __init__.py  daemon.py  generate.py  run.py  serve.py  tasks.py
src/aipartnerupflow/core/: __init__.py  decorators.py  types.py
src/aipartnerupflow/core/base/: __init__.py  base_task.py
src/aipartnerupflow/core/config/: __init__.py  registry.py
src/aipartnerupflow/core/execution/: __init__.py  dependency_resolver.py  executor_registry.py  streaming_callbacks.py  task_creator.py  task_executor.py  task_manager.py  task_tracker.py
src/aipartnerupflow/core/extensions/: __init__.py  base.py  decorators.py  executor_metadata.py  hook.py  protocol.py  registry.py  storage.py  types.py
src/aipartnerupflow/core/interfaces/: __init__.py  executable_task.py
src/aipartnerupflow/core/storage/: __init__.py  context.py  factory.py
src/aipartnerupflow/core/storage/dialects/: __init__.py  duckdb.py  postgres.py  registry.py
src/aipartnerupflow/core/storage/sqlalchemy/: __init__.py  models.py  task_repository.py
src/aipartnerupflow/core/tools/: __init__.py  base.py  decorators.py  registry.py
src/aipartnerupflow/core/utils/: __init__.py  dependency_validator.py  helpers.py  logger.py
src/aipartnerupflow/extensions/: __init__.py
src/aipartnerupflow/extensions/core/: __init__.py  aggregate_results_executor.py
src/aipartnerupflow/extensions/crewai/: __init__.py  batch_manager.py  crew_manager.py  types.py
src/aipartnerupflow/extensions/generate/: generate_executor.py
src/aipartnerupflow/extensions/hooks/: __init__.py  post_execution_hook.py  pre_execution_hook.py
src/aipartnerupflow/extensions/http/: rest_executor.py
src/aipartnerupflow/extensions/llm/: __init__.py  llm_executor.py
src/aipartnerupflow/extensions/stdio/: __init__.py  command_executor.py  system_info_executor.py
src/aipartnerupflow/extensions/storage/: __init__.py  duckdb_storage.py  postgres_storage.py
src/aipartnerupflow/extensions/tools/: __init__.py  github_tools.py  limited_scrape_tools.py
tests/: __init__.py  conftest.py  test_custom_task_model.py  test_session_pool.py  test_session_pool_isolation.py
tests/api/: __init__.py  test_main.py  test_task_update_validation.py  test_tasks_routes.py
tests/api/a2a/: __init__.py  test_a2a_client.py  test_agent_executor.py  test_docs_routes.py  test_http_json_rpc.py
tests/cli/: __init__.py  test_daemon_command.py  test_generate_command.py  test_run_command.py  test_serve_command.py  test_tasks_command.py
tests/core/: __init__.py  test_decorators.py  test_user_id_extraction.py
tests/core/execution/: __init__.py  test_task_creator.py  test_task_executor_tools_integration.py  test_task_manager.py
tests/core/storage/: __init__.py  test_context.py
tests/core/storage/sqlalchemy/: __init__.py  test_custom_task_model.py  test_session_pool.py  test_task_repository.py
tests/extensions/: __init__.py
tests/extensions/core/: test_aggregate_results_executor.py
tests/extensions/crewai/: __init__.py  test_batch_manager.py  test_crew_manager.py
tests/extensions/generate/: test_integration.py
tests/extensions/http/: test_rest_executor.py
tests/extensions/llm/: test_llm_executor.py
tests/extensions/stdio/: __init__.py  test_command_executor.py  test_system_info_executor.py
tests/extensions/tools/: test_tools_decorator.py
tests/integration/: __init__.py  test_aggregate_results_integration.py
